--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
     "@typescript-eslint/no-unused-vars": [
       "warn",
       { "argsIgnorePattern": "_.*" }
-    ]
+    ],
+    "@typescript-eslint/no-unused-expressions": "warn",
+    "@typescript-eslint/no-require-imports": "warn",
+    "@typescript-eslint/no-unsafe-function-type": "warn"
   }
 }
