--- a/packages/particles-ui-demo/package.json
+++ b/packages/particles-ui-demo/package.json
@@ -78,8 +78,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@lit-labs/signals": "^0.1.2",
     "@breadboard-ai/particles": "0.0.1",
+    "@google/genai": "^1.5.0",
+    "@lit-labs/signals": "^0.1.2",
+    "@modelcontextprotocol/sdk": "^1.12.3",
     "signal-utils": "^0.21.1"
   }
 }
