--- a/packages/filesystem-board-server/package.json
+++ b/packages/filesystem-board-server/package.json
@@ -65,7 +65,7 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/filesystem-board-server#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
+    "@ava/typescript": "6.0.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-labs/tsconfig": "^0.0.1",
     "@types/markdown-it": "^14.1.2",
