--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
-    "ava": "^5.2.0",
+    "ava": "6.4.0",
     "eslint": "^8.57.1",
     "eslint-plugin-expect-type": "^0.6.2",
     "prettier": "^3.5.3",
