--- a/packages/data-store/package.json
+++ b/packages/data-store/package.json
@@ -144,7 +144,7 @@
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
-    "ava": "^5.2.0",
+    "ava": "6.4.0",
     "esbuild": "^0.25.2",
     "typescript": "^5.8.3"
   },
