--- a/packages/data-store/package.json
+++ b/packages/data-store/package.json
@@ -137,14 +137,14 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/data-store#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
+    "@ava/typescript": "6.0.0",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@google-labs/tsconfig": "^0.0.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
-    "ava": "^5.2.0",
+    "ava": "6.4.0",
     "esbuild": "^0.25.2",
     "typescript": "^5.8.3"
   },
