--- a/packages/filesystem-board-server/package.json
+++ b/packages/filesystem-board-server/package.json
@@ -65,14 +65,14 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/filesystem-board-server#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
+    "@ava/typescript": "6.0.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-labs/tsconfig": "^0.0.1",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
-    "ava": "^5.2.0",
+    "ava": "6.4.0",
     "dotenv": "^16.4.7",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
