--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "packages/google-drive-kit" },
     { "path": "packages/idb-board-server" },
     { "path": "packages/schema" },
+    { "path": "packages/particles-ui" },
     { "path": "packages/shared-ui" },
     { "path": "packages/theme" },
     { "path": "packages/types" },
