[gdrive] Implemented proper copy/remix that's aware of google drive files and copies them as well

--- a/packages/breadboard/package.json
+++ b/packages/breadboard/package.json
@@ -10,7 +10,8 @@
     ".": "./dist/src/index.js",
     "./kits": "./dist/src/kits/index.js",
     "./remote": "./dist/src/remote/index.js",
-    "./harness": "./dist/src/harness/index.js"
+    "./harness": "./dist/src/harness/index.js",
+    "./data": "./dist/src/data/index.js"
   },
   "types": "dist/src/index.d.ts",
   "type": "module",
