--- a/packages/particles-ui/package.json
+++ b/packages/particles-ui/package.json
@@ -105,6 +105,13 @@
     "@breadboard-ai/particles": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
     "@google-labs/breadboard": "^0.34.0",
-    "@material/material-color-utilities": "^0.3.0"
+    "@material/material-color-utilities": "^0.3.0",
+    "@lit-labs/signals": "^0.1.2",
+    "@lit/context": "^1.1.4",
+    "@lit/task": "^1.0.2",
+    "markdown-it": "^14.1.0",
+    "pdfjs-dist": "^5.2.133",
+    "signal-polyfill": "^0.2.2",
+    "signal-utils": "^0.21.1"
   }
 }
