Patch up particles-ui-demo

--- a/packages/particles-ui-demo/package.json
+++ b/packages/particles-ui-demo/package.json
@@ -16,7 +16,10 @@
   },
   "wireit": {
     "dev": {
-      "command": "vite dev"
+      "command": "vite dev",
+      "dependencies": [
+        "build"
+      ]
     },
     "build": {
       "dependencies": [
@@ -82,6 +85,7 @@
     "@breadboard-ai/particles-ui": "0.0.1",
     "@google/genai": "^1.6.0",
     "@lit-labs/signals": "^0.1.2",
+    "@lit/context": "^1.1.4",
     "@modelcontextprotocol/sdk": "^1.13.1",
     "@vavt/vite-plugin-import-markdown": "^1.0.1",
     "signal-utils": "^0.21.1"
