--- a/packages/particles-ui/package.json
+++ b/packages/particles-ui/package.json
@@ -4,8 +4,7 @@
   "description": "Particle UI",
   "main": "./dist/src/index.js",
   "exports": {
-    ".": "./dist/src/index.js",
-    "./particles": "./dist/src/types/particles.d.ts"
+    ".": "./dist/src/index.js"
   },
   "types": "dist/src/index.d.ts",
   "type": "module",
@@ -105,6 +104,13 @@
     "@breadboard-ai/particles": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
     "@google-labs/breadboard": "^0.34.0",
-    "@material/material-color-utilities": "^0.3.0"
+    "@material/material-color-utilities": "^0.3.0",
+    "@lit-labs/signals": "^0.1.2",
+    "@lit/context": "^1.1.4",
+    "@lit/task": "^1.0.2",
+    "markdown-it": "^14.1.0",
+    "pdfjs-dist": "^5.2.133",
+    "signal-polyfill": "^0.2.2",
+    "signal-utils": "^0.21.1"
   }
 }
