--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -39,7 +39,7 @@
       "clean": "if-file-deleted"
     },
     "test": {
-      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/**/*.js",
+      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/*.js",
       "dependencies": [
         "build:tsc"
       ],
