--- a/packages/board-server/package.json
+++ b/packages/board-server/package.json
@@ -145,7 +145,9 @@
     "@breadboard-ai/data-store": "0.3.3",
     "@breadboard-ai/google-drive-kit": "0.6.0",
     "@breadboard-ai/jsandbox": "0.6.0",
+    "@breadboard-ai/runtime": "^0.0.1",
     "@breadboard-ai/types": "0.7.0",
+    "@breadboard-ai/utils": "^0.0.1",
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/secret-manager": "^6.0.1",
     "@google-cloud/storage": "^7.15.2",
