--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/src/index.js",
   "exports": {
     ".": {
-      "default": "./dist/src/index.js",
-      "types": "./dist/src/index.d.ts"
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
     },
     "./legacy.js": {
       "types": "./dist/src/legacy.d.ts",
