--- a/packages/breadboard/package.json
+++ b/packages/breadboard/package.json
@@ -158,7 +158,7 @@
   },
   "dependencies": {
     "@breadboard-ai/jsandbox": "0.6.0",
-    "@breadboard-ai/loader": "^0.0.1",
+    "@breadboard-ai/loader": "0.0.1",
     "@breadboard-ai/runtime": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
     "@breadboard-ai/utils": "0.0.1",
