--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -47,14 +47,48 @@
       "clean": "if-file-deleted"
     },
     "test": {
-      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/*.js",
+      "dependencies": [
+        "test:ava",
+        "test:node"
+      ]
+    },
+    "test:ava": {
+      "command": "ava",
+      "env": {
+        "FORCE_COLOR": "1"
+      },
       "dependencies": [
         "build:tsc"
       ],
       "files": [
-        "tests/**/*.ts"
+        "tests/ava/**/*.json",
+        "!tests/node/**/*.ts"
       ],
       "output": []
+    },
+    "test:node": {
+      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/node/*.js",
+      "dependencies": [
+        "build:tsc"
+      ],
+      "files": [
+        "tests/node/**/*.ts",
+        "tests/bgl/*.bgl.json"
+      ],
+      "output": []
+    }
+  },
+  "ava": {
+    "timeout": "30s",
+    "files": [
+      "tests/ava/**/*.ts"
+    ],
+    "workerThreads": false,
+    "typescript": {
+      "rewritePaths": {
+        "./": "dist/"
+      },
+      "compile": false
     }
   },
   "keywords": [],
