--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -76,6 +76,20 @@
         "tests/bgl/*.bgl.json"
       ],
       "output": []
+    },
+    "lint": {
+      "command": "eslint . --ext .ts",
+      "env": {
+        "FORCE_COLOR": "1"
+      },
+      "dependencies": [
+        "build:tsc"
+      ],
+      "files": [
+        ".eslintrc",
+        "../../.eslintrc.json"
+      ],
+      "output": []
     }
   },
   "ava": {
