--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@breadboard-ai/loader",
+  "name": "@breadboard-ai/data",
   "version": "0.0.1",
-  "description": "General loader machinery",
+  "description": "Handles data transformation for Breadboard",
   "main": "./dist/src/index.js",
   "exports": "./dist/src/index.js",
   "types": "dist/src/index.d.ts",
@@ -12,6 +12,14 @@
     "build": "wireit",
     "lint": "wireit"
   },
+  "repository": {
+    "directory": "packages/blank",
+    "type": "git",
+    "url": "https://github.com/breadboard-ai/breadboard.git"
+  },
+  "files": [
+    "dist/src"
+  ],
   "wireit": {
     "build": {
       "dependencies": [
@@ -39,12 +47,33 @@
       "clean": "if-file-deleted"
     },
     "test": {
-      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/*.js",
+      "dependencies": [
+        "test:ava",
+        "test:node"
+      ]
+    },
+    "test:ava": {
+      "command": "ava",
+      "env": {
+        "FORCE_COLOR": "1"
+      },
       "dependencies": [
         "build:tsc"
       ],
       "files": [
-        "tests/**/*.ts"
+        "tests/ava/**/*.json",
+        "!tests/node/**/*.ts"
+      ],
+      "output": []
+    },
+    "test:node": {
+      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/node/*.js",
+      "dependencies": [
+        "build:tsc"
+      ],
+      "files": [
+        "tests/node/**/*.ts",
+        "tests/bgl/*.bgl.json"
       ],
       "output": []
     },
@@ -63,14 +92,19 @@
       "output": []
     }
   },
-  "repository": {
-    "directory": "packages/loader",
-    "type": "git",
-    "url": "https://github.com/breadboard-ai/breadboard.git"
+  "ava": {
+    "timeout": "30s",
+    "files": [
+      "tests/ava/**/*.ts"
+    ],
+    "workerThreads": false,
+    "typescript": {
+      "rewritePaths": {
+        "./": "dist/"
+      },
+      "compile": false
+    }
   },
-  "files": [
-    "dist/src"
-  ],
   "keywords": [],
   "author": "Google Labs Team",
   "license": "Apache-2.0",
@@ -79,6 +113,7 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard#readme",
   "devDependencies": {
+    "@ava/typescript": "6.0.0",
     "@google-labs/tsconfig": "^0.0.1",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
@@ -87,7 +122,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@breadboard-ai/data": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
     "@breadboard-ai/utils": "0.0.1"
   }
