--- a/packages/core-kit/package.json
+++ b/packages/core-kit/package.json
@@ -114,9 +114,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@breadboard-ai/loader": "^0.0.1",
     "@breadboard-ai/runtime": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
-    "@breadboard-ai/utils": "0.0.1",
+    "@breadboard-ai/utils": "^0.0.1",
     "@google-labs/breadboard": "^0.34.0"
   }
 }
