--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -133,8 +133,10 @@
     "@breadboard-ai/jsandbox": "0.6.0",
     "@breadboard-ai/particles": "0.0.1",
     "@breadboard-ai/particles-ui": "0.0.1",
+    "@breadboard-ai/runtime": "^0.0.1",
     "@breadboard-ai/theme": "0.0.1",
     "@breadboard-ai/types": "0.7.0",
+    "@breadboard-ai/utils": "^0.0.1",
     "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/commands": "^6.8.0",
     "@codemirror/lang-javascript": "^6.2.3",
