Working end to end.

--- a/packages/a2/tsconfig-modules.json
+++ b/packages/a2/tsconfig-modules.json
@@ -21,11 +21,6 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vite/client"]
   },
-  "include": [
-    "src/**/*.ts",
-    "bgl/src/**/*.ts",
-    "bgl/**/*.bgl.json",
-    "bgl/src/environment.d.ts"
-  ],
+  "include": ["bgl/src/**/*.ts", "bgl/src/environment.d.ts"],
   "extends": "@google-labs/tsconfig/base.json"
 }
