--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -22,18 +22,48 @@
       ],
       "files": [
         "src/**/*.ts",
-        "bgl/**/*.json",
         "tsconfig.json",
         "../../core/tsconfig/base.json"
       ]
     },
-    "build:tsc": {
-      "command": "tsc -b --pretty",
+    "build:bgls": {
+      "command": "tsx scripts/build-bgls.ts",
+      "dependencies": [
+        "build:modules"
+      ],
+      "files": [
+        "bgl/src/**/bgl.json",
+        "scripts/build-bgls.ts"
+      ]
+    },
+    "build:modules": {
+      "command": "tsc -p tsconfig-modules.json --pretty",
       "env": {
         "FORCE_COLOR": "1"
       },
       "dependencies": [
-        "typescript-files-and-deps"
+        "<dependencies>#build:tsc"
+      ],
+      "files": [
+        "bgl/src/**/*.ts",
+        "bgl/src/**/*.js",
+        "tsconfig-modules.json",
+        "../../core/tsconfig/base.json"
+      ],
+      "output": [
+        "dist/bgl/src",
+        "!dist/bgl/src/**/*.min.js{,.map}"
+      ],
+      "clean": "if-file-deleted"
+    },
+    "build:tsc": {
+      "command": "tsc -p tsconfig-assemble.json --pretty",
+      "env": {
+        "FORCE_COLOR": "1"
+      },
+      "dependencies": [
+        "typescript-files-and-deps",
+        "build:bgls"
       ],
       "files": [],
       "output": [
