Remove unused source files.

--- a/packages/a2/package.json
+++ b/packages/a2/package.json
@@ -22,7 +22,7 @@
       ],
       "files": [
         "src/**/*.ts",
-        "tsconfig.json",
+        "tsconfig-assemble.json",
         "../../core/tsconfig/base.json"
       ]
     },
