[unified-server] Add landing page

--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -121,7 +121,7 @@
       ],
       "files": [
         "scripts/copy-assets.ts",
-        "landing/styles/**/*.css"
+        "landing/styles/**/*.*"
       ],
       "output": [
         "public/",
