--- a/packages/filesystem-board-server/tsconfig.json
+++ b/packages/filesystem-board-server/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable", "ESNext"],
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
