--- a/packages/a2/tsconfig-modules.json
+++ b/packages/a2/tsconfig-modules.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "./dist",
+    "outDir": "./out",
     "target": "ES2020",
     "module": "ESNext",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
