--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,8 +3,20 @@
   "version": "0.0.2",
   "description": "Handles data transformation for Breadboard",
   "main": "./dist/src/index.js",
-  "exports": "./dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.js"
+    },
+    "./index.js": {
+      "types": null,
+      "default": null
+    },
+    "./*.js": {
+      "types": "./dist/src/*.d.ts",
+      "default": "./dist/src/*.js"
+    }
+  },
   "type": "module",
   "scripts": {
     "prepack": "npm run build",
