Force sign in when scopes are missing

--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -94,7 +94,8 @@
       "command": "[ -f ./secrets/local.json ] && export CONNECTIONS_FILE=./secrets/local.json && export GOOGLE_CLOUD_PROJECT=$(gcloud config get-value project) && export FIRESTORE_DB_NAME=unified-server && export STORAGE_BUCKET=bb-blob-store SERVER_URL=http://localhost:3000/board && node --enable-source-maps .",
       "service": true,
       "files": [
-        "vite.config.ts"
+        "vite.config.ts",
+        "secrets/*.json"
       ],
       "dependencies": [
         "build:tsc:server",
