--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -89,6 +89,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@breadboard-ai/types": "^0.8.0"
+    "@breadboard-ai/types": "^0.8.0",
+    "@breadboard-ai/utils": "^0.0.2"
   }
 }
