--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -80,13 +80,13 @@
   },
   "homepage": "https://github.com/breadboard-ai/breadboard#readme",
   "devDependencies": {
-    "@ava/typescript": "^4.0.0",
+    "@ava/typescript": "6.0.0",
     "@google-labs/tsconfig": "^0.0.2",
-    "@types/node": "^18.16.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "ava": "^5.2.0",
-    "typescript": "^5.0.4"
+    "@types/node": "^22.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.34.1",
+    "ava": "6.4.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@breadboard-ai/types": "^0.8.0",
