[mcp] Introduce MCP client infrastructure.
- **Sketch out the `rpc` utility**
- **Stub out `mcp` package.**
- **rpc works end to end.**
- **Sketch out `ProxiedPersistentBackend`.**
- **Switch to supply server at each rpc request.**
- **Introduce `/mnt` server endpoint.**
- **Add MCP SDK as deps.**
- **Add `callTool` support to MCP server.**
- **Clean up.**
- **Require auth for the `/mnt` endpoint.**
- **docs(changeset): Introduce MCP client infrastructure.**

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "@breadboard-ai/particles-ui-demo",
-  "private": true,
-  "version": "0.1.0",
-  "description": "AI-first UI Toolkit Demo",
+  "name": "@breadboard-ai/mcp",
+  "version": "0.0.1",
+  "description": "MCP Support for Breadboard",
   "main": "./dist/src/index.js",
   "exports": "./dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
     "prepack": "npm run build",
+    "test": "wireit",
     "build": "wireit",
-    "build:tsc": "wireit",
-    "lint": "wireit",
-    "dev": "wireit"
+    "lint": "wireit"
   },
   "wireit": {
-    "dev": {
-      "command": "vite dev",
-      "dependencies": [
-        "build"
-      ]
-    },
     "build": {
       "dependencies": [
         "build:tsc"
@@ -28,12 +20,12 @@
     },
     "build:tsc": {
       "command": "tsc -b --pretty",
-      "env": {
-        "FORCE_COLOR": "1"
-      },
       "dependencies": [
         "<dependencies>#build"
       ],
+      "env": {
+        "FORCE_COLOR": "1"
+      },
       "files": [
         "src/**/*.ts",
         "tests/**/*.ts",
@@ -45,6 +37,16 @@
         "!dist/**/*.min.js{,.map}"
       ],
       "clean": "if-file-deleted"
+    },
+    "test": {
+      "command": "node --test --enable-source-maps --test-reporter spec dist/tests/*.js",
+      "dependencies": [
+        "build:tsc"
+      ],
+      "files": [
+        "tests/**/*.ts"
+      ],
+      "output": []
     },
     "lint": {
       "command": "eslint . --ext .ts",
@@ -62,7 +64,7 @@
     }
   },
   "repository": {
-    "directory": "packages/particles-ui-demo",
+    "directory": "packages/mcp",
     "type": "git",
     "url": "https://github.com/breadboard-ai/breadboard.git"
   },
@@ -75,19 +77,19 @@
   "bugs": {
     "url": "https://github.com/breadboard-ai/breadboard/issues"
   },
-  "homepage": "https://github.com/breadboard-ai/breadboard/tree/main/packages/particles-ui-demo#readme",
+  "homepage": "https://github.com/breadboard-ai/breadboard#readme",
   "devDependencies": {
+    "@ava/typescript": "6.0.0",
     "@google-labs/tsconfig": "^0.0.2",
+    "@types/node": "^22.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.34.1",
+    "ava": "6.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@breadboard-ai/particles": "0.1.0",
-    "@breadboard-ai/particles-ui": "0.1.0",
-    "@google/genai": "^1.9.0",
-    "@lit-labs/signals": "^0.1.3",
-    "@lit/context": "^1.1.4",
-    "@modelcontextprotocol/sdk": "^1.17.1",
-    "@vavt/vite-plugin-import-markdown": "^1.0.1",
-    "signal-utils": "^0.21.1"
+    "@breadboard-ai/types": "^0.8.0",
+    "@breadboard-ai/utils": "^0.0.2",
+    "@modelcontextprotocol/sdk": "^1.17.1"
   }
 }
