Use `/api/mcp-proxy` endpoint.

--- a/packages/visual-editor/package.json
+++ b/packages/visual-editor/package.json
@@ -213,6 +213,7 @@
     "@breadboard-ai/google-drive-kit": "0.7.0",
     "@breadboard-ai/idb-board-server": "1.19.5",
     "@breadboard-ai/jsandbox": "0.7.0",
+    "@breadboard-ai/mcp": "^0.0.1",
     "@breadboard-ai/runtime": "0.1.0",
     "@breadboard-ai/shared-ui": "1.26.0",
     "@breadboard-ai/theme": "0.0.2",
