--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -90,6 +90,7 @@
   "dependencies": {
     "@breadboard-ai/types": "^0.8.0",
     "@breadboard-ai/utils": "^0.0.2",
-    "@modelcontextprotocol/sdk": "^1.17.1"
+    "@modelcontextprotocol/sdk": "^1.17.1",
+    "zod": "^3.23.8"
   }
 }
