--- a/packages/a2/tsconfig.json
+++ b/packages/a2/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "target": "ES2020",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2022"],
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
