--- a/packages/unified-server/package.json
+++ b/packages/unified-server/package.json
@@ -163,6 +163,7 @@
   "homepage": "https://github.com/breadboard-ai/breadboard#readme",
   "devDependencies": {
     "@google-labs/tsconfig": "^0.0.2",
+    "@types/compression": "^1.8.1",
     "@types/express": "^5.0.1",
     "@types/gtag.js": "^0.0.20",
     "@types/node": "^22.0.0",
@@ -185,6 +186,7 @@
     "@breadboard-ai/utils": "^0.0.2",
     "@breadboard-ai/visual-editor": "1.29.0",
     "@google-labs/breadboard": "0.35.0",
+    "compression": "^1.8.1",
     "express": "^4.21.2",
     "google-auth-library": "^10.1.0",
     "picomatch": "^4.0.3",
