--- a/experiments/screens/package.json
+++ b/experiments/screens/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "generate": "tsx src/generate.ts",
+    "dev": "vite dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.19.0",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "vite": "^6.3.6"
   }
 }
