--- a/packages/gulf/package.json
+++ b/packages/gulf/package.json
@@ -79,6 +79,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@breadboard-ai/utils": "^0.1.0",
     "@lit-labs/signals": "^0.1.3",
     "@lit/context": "^1.1.4",
     "signal-utils": "^0.21.1"
