--- a/packages/gulf/package.json
+++ b/packages/gulf/package.json
@@ -81,9 +81,12 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@a2a-js/sdk": "^0.3.4",
     "@breadboard-ai/utils": "^0.1.0",
     "@lit-labs/signals": "^0.1.3",
     "@lit/context": "^1.1.4",
+    "http-proxy": "^1.18.1",
+    "json-rpc-2.0": "^1.7.1",
     "signal-utils": "^0.21.1"
   }
 }
