simple top-level dev command

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test": "wireit",
     "build": "wireit",
     "lint": "wireit",
-    "ci": "npm ci",
-    "s": "npm run dev -w packages/board-server --watch",
-    "w": "(cd packages/visual-editor && npm run dev) # Starts the breadboard web UI",
+    "dev": "npm run dev -w packages/unified-server --watch",
     "check:format": "prettier --check --config .prettierrc packages/**/*.ts",
     "ci:local": "wireit",
     "syncpack:check": "wireit",
