--- a/.github/workflows/labs-prototypes-ci.yml
+++ b/.github/workflows/labs-prototypes-ci.yml
@@ -28,7 +28,7 @@ jobs:
         if: github.event_name != 'pull_request' # For PRs, caching is disabled to ensure a clean build
 
       - name: Clean Installing dependencies
-        run: npm run ci
+        run: npm ci
 
       - name: Generating the build
         run: npm run build
