--- a/packages/google-drive-kit/package.json
+++ b/packages/google-drive-kit/package.json
@@ -116,7 +116,9 @@
     "@breadboard-ai/data": "0.1.0",
     "@breadboard-ai/types": "0.9.0",
     "@google-labs/breadboard": "^0.36.0",
-    "@types/gapi.client.drive-v3": "^0.0.5"
+    "@types/gapi.client.drive-v3": "^0.0.5",
+    "idb": "^8.0.3",
+    "signal-utils": "^0.21.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
