Remove unused icon files.

--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -1,6 +1,6 @@
 VITE_CONNECTION_SERVER_URL=/connection/
 VITE_LANGUAGE_PACK=./opal-lang.js
-VITE_ASSET_PACK=langs/icons
+VITE_ASSET_PACK=/icons/
 VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
 VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_FONT_FACE_FLEX="Google Sans Flex", "Helvetica Neue", Helvetica, Arial, sans-serif
