--- a/packages/visual-editor/.env.production
+++ b/packages/visual-editor/.env.production
@@ -2,7 +2,7 @@
 # Server URL here.
 VITE_CONNECTION_SERVER_URL=https://connections-dot-breadboard-ai.googleplex.com
 VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
-VITE_ASSET_PACK=langs/icons
+VITE_ASSET_PACK=/icons/
 VITE_FONT_FACE_MONO="Courier New", Courier, monospace
 VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
 VITE_ENABLE_TOS=false
