Unfork Opal bits, bringing unified-server in sync with production code
- **Dogfood tos content**
- **[flows] Add Flows Lang Pack**
- **Add Opal strings and logo**
- **Opalize strings.**
- **Add LABEL_TEAM_NAME=Opals Team**
- **Add STATUS_CREATING_PROJECT and LABEL_READONLY_PROJECT.**
- **[tos] Updated bullet point 4, made all the links to open in new
tab**
- **Dogfood tos content**
- **[flows] Add Flows Lang Pack**
- **Add Opal strings and logo**
- **Update TOS and Policy**
- **Add provider name string**
- **Update font in env**
- **Update disclaimer string**
- **Remove "dogfood" from the TOS and Policy.**
- **Update icon**
- **Update strings**
- **Change 'Opals Team' to 'Opal Team'**
- **[visual-editor] Update strings**
- **[us/ve] Add prod share card**

---------

Co-authored-by: Leksyk <volodya@google.com>
Co-authored-by: Al Marks <aomarks@google.com>
Co-authored-by: Paul Lewis <617438+paullewis@users.noreply.github.com>

--- a/packages/visual-editor/.env.production
+++ b/packages/visual-editor/.env.production
@@ -1,6 +1,6 @@
 # To connect the Visual Editor to a Connection Server, provide the Connection
 # Server URL here.
-VITE_CONNECTION_SERVER_URL=
+VITE_CONNECTION_SERVER_URL=https://connections-dot-breadboard-ai.googleplex.com
 VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
 VITE_ASSET_PACK=/icons/
 VITE_FONT_FACE_MONO="Courier New", Courier, monospace
