--- a/packages/unified-server/.env.development
+++ b/packages/unified-server/.env.development
@@ -1,9 +1,15 @@
 VITE_CONNECTION_SERVER_URL=/connection/
-VITE_LANGUAGE_PACK=@breadboard-ai/shared-ui/strings/en_US
-VITE_ASSET_PACK=/icons/
-VITE_FONT_FACE_MONO="Courier New", Courier, monospace
-VITE_FONT_FACE="Helvetica Neue", Helvetica, Arial, sans-serif
-VITE_ENABLE_TOS=false
-VITE_TOS_HTML_PATH=""
-VITE_GOOGLE_DRIVE_USER_FOLDER_NAME="Breadboard Dev"
+VITE_LANGUAGE_PACK=./opal-lang.js
+VITE_ASSET_PACK=langs/icons
+VITE_FONT_FACE_MONO="Google Sans Code", "Courier New", Courier, monospace
+VITE_FONT_FACE="Google Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_FONT_FACE_FLEX="Google Sans Flex", "Helvetica Neue", Helvetica, Arial, sans-serif
+VITE_FONT_LINK="https://fonts.googleapis.com/css2?family=Google+Sans+Code&family=Google+Sans+Flex:opsz,wght,ROND@6..144,1..1000,100&family=Google+Sans:opsz,wght@17..18,400..700&display=block"
+
+VITE_ENABLE_TOS=true
+VITE_TOS_HTML_PATH="public/tos.html"
+VITE_GOOGLE_DRIVE_USER_FOLDER_NAME="Opals"
+
 VITE_ENVIRONMENT_NAME="dev"
+VITE_ENABLE_POLICY=true
+VITE_POLICY_HTML_PATH="public/policy.html"
