--- a/packages/jsandbox/Cargo.toml
+++ b/packages/jsandbox/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 rquickjs = { version = "0.6.2", default-features = false, features = [ "loader", "futures"] }
 
 thiserror = "1.0.65"
+paste = "1.0"
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
 js-sys = { workspace = true }
