--- a/experiments/screens/package.json
+++ b/experiments/screens/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "generate": "tsx src/generate.ts",
     "dev": "vite dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx test/adventure-game.test.ts"
   },
   "keywords": [],
   "author": "",
